--- a/hello_app/templates/layout.html
+++ b/hello_app/templates/layout.html
@@ -9,6 +9,7 @@
     <body>
         <div class="navbar">
             <a href="{{ url_for('home') }}" class="navbar-brand">Home</a>
+            <a href="{{ url_for('translator') }}" class="navbar-item">Translator</a>
             <a href="{{ url_for('about') }}" class="navbar-item">About</a>
             <a href="{{ url_for('contact') }}" class="navbar-item">Contact</a>
         </div>
