--- a/hello_app/static/site.css
+++ b/hello_app/static/site.css
@@ -9,6 +9,7 @@
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: white;
     padding: 8px 5px 8px 5px;
+    justify-content: normal;
 }
 
 .navbar a {
