translator_results html

--- a/hello_app/templates/translator_results.html
+++ b/hello_app/templates/translator_results.html
@@ -15,7 +15,7 @@ Translator Results
             <strong>Target language code:</strong> {{ target_language }}
         </div>
         <div>
-            <a href="{{ url_for('home') }}">Try another one!</a>
+            <a href="{{ url_for('translator') }}">Try another one!</a>
         </div>
     </div>
 {% endblock %}
