--- a/hello_app/templates/about.html
+++ b/hello_app/templates/about.html
@@ -4,4 +4,4 @@ About us
 {% endblock %}
 {% block content %}
 <p>About page for the Visual Studio Code Flask tutorial.</p>
-{% endblock %}
+{% endblock %}ß
