--- a/hello_app/templates/rockpaperscissor.html
+++ b/hello_app/templates/rockpaperscissor.html
@@ -20,7 +20,7 @@ Rock Paper Scissor
 </form>
 <script>
    $(document).ready(function () {
-      $('form').submit(function (event) {ß
+      $('form').submit(function (event) {
          event.preventDefault();
          $.ajax({
             type: 'POST',
